Set the vertical align on videos to fix alignment of overlays

--- a/source/patterns/components/video/video.scss
+++ b/source/patterns/components/video/video.scss
@@ -4,4 +4,5 @@
   // Made responsive thanks to https://stackoverflow.com/a/19796950
   width: 100%;
   max-height: 100%;
+  vertical-align: bottom;
 }
